--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:baselineAligned="false"
     android:textAlignment="center"
     android:weightSum="1">
 
@@ -68,11 +69,12 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
-                android:paddingBottom="10dp" />
+                android:paddingBottom="10dp"
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/tempratureT"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
@@ -107,7 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Updated Time "
+                android:text="Updated Time"
                 android:textAlignment="viewEnd"
                 android:textColor="#F8F9FA"
                 android:textSize="16sp" />
@@ -162,9 +164,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-
                             android:paddingTop="20dp"
-                            android:text="Humidity"
+                            android:text="@string/humid"
                             android:textAlignment="center"
                             android:textColor="#F8F9FA"
                             android:textSize="20sp"
@@ -175,9 +176,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="47dp"
                             android:layout_weight="1"
-
                             android:paddingTop="20dp"
-                            android:text="Size"
+                            android:text=""
                             android:textAlignment="center"
                             android:textColor="#F8F9FA"
                             android:textSize="20sp"
@@ -223,24 +223,26 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView42"
+                            android:id="@+id/textView2"
                             android:layout_width="match_parent"
-                            android:layout_height="66dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="Pressure"
+                            android:text="@string/pressure"
                             android:textAlignment="center"
-                            android:textColor="#FAF8F8"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/pressureT"
                             android:layout_width="match_parent"
-                            android:layout_height="66dp"
+                            android:layout_height="47dp"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="BP"
+                            android:text=""
                             android:textAlignment="center"
-                            android:textColor="#FFFFFF"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -278,24 +280,26 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView44"
+                            android:id="@+id/textView7"
                             android:layout_width="match_parent"
-                            android:layout_height="59dp"
-                            android:paddingTop="15dp"
-                            android:text="Wind"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:paddingTop="20dp"
+                            android:text="@string/Wind"
                             android:textAlignment="center"
-                            android:textColor="#F3EFEF"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/windspeedT"
                             android:layout_width="match_parent"
-                            android:layout_height="67dp"
-                            android:paddingTop="15dp"
-                            android:text="Speed"
+                            android:layout_height="47dp"
+                            android:layout_weight="1"
+                            android:paddingTop="10dp"
+                            android:text=""
                             android:textAlignment="center"
-                            android:textColor="#FAF9F9"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -340,24 +344,26 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView46"
+                            android:id="@+id/textView"
                             android:layout_width="match_parent"
-                            android:layout_height="66dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="UV"
+                            android:text="@string/uv"
                             android:textAlignment="center"
-                            android:textColor="#F4F1F1"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/uvT"
                             android:layout_width="match_parent"
-                            android:layout_height="70dp"
+                            android:layout_height="47dp"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="Size"
+                            android:text=""
                             android:textAlignment="center"
-                            android:textColor="#F4F0F0"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -395,24 +401,26 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView48"
+                            android:id="@+id/textView6"
                             android:layout_width="match_parent"
-                            android:layout_height="66dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="Visibility"
+                            android:text="@string/vis"
                             android:textAlignment="center"
-                            android:textColor="#F6F3F3"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/visT"
                             android:layout_width="match_parent"
-                            android:layout_height="76dp"
+                            android:layout_height="47dp"
+                            android:layout_weight="1"
                             android:paddingTop="20dp"
-                            android:text="BP"
+                            android:text=""
                             android:textAlignment="center"
-                            android:textColor="#F4F2F2"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -450,24 +458,26 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView50"
+                            android:id="@+id/textView8"
                             android:layout_width="match_parent"
-                            android:layout_height="58dp"
-                            android:paddingTop="15dp"
-                            android:text="Feels Like"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:paddingTop="20dp"
+                            android:text="@string/feels_like"
                             android:textAlignment="center"
-                            android:textColor="#F6F4F4"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/feelsT"
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
-                            android:paddingTop="15dp"
-                            android:text="Speed"
+                            android:layout_height="47dp"
+                            android:layout_weight="1"
+                            android:paddingTop="10dp"
+                            android:text=""
                             android:textAlignment="center"
-                            android:textColor="#FBFBFB"
+                            android:textColor="#F8F9FA"
                             android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
