--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         android:gravity="center"
         android:text="24°C"
         android:textColor="@color/white"
-        android:textSize="60dp"
+        android:textSize="60sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -73,7 +73,7 @@
 
         <Space
             android:layout_width="10dp"
-            android:layout_height="wrap_content"></Space>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -87,8 +87,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/humidity"
-                app:srcCompat="@drawable/humidity">
+                android:src="@drawable/humidity">
 
             </ImageView>
 
@@ -102,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Humidity"
+                android:text="@string/humid"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold">
@@ -115,7 +114,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:paddingTop="5dp"
-                android:text="Size"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -156,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Pressure"
+                android:text="@string/pressure"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold">
@@ -169,7 +167,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:paddingTop="5dp"
-                android:text="BP"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -210,7 +207,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Wind"
+                android:text="@string/Wind"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold">
@@ -223,7 +220,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:paddingTop="5dp"
-                android:text="Speed"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -270,28 +266,26 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/uv"></ImageView>
+                android:src="@drawable/uv"/>
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"></Space>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="UV"
+                android:text="@string/uv"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/uvT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-
-                android:text="Size"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -318,28 +312,26 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="62dp"
-                android:src="@drawable/visibility"></ImageView>
+                android:src="@drawable/visibility"/>
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"></Space>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Visibility"
+                android:text="@string/vis"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/visT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-
-                android:text="BP"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -366,27 +358,26 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="64dp"
-                android:src="@drawable/feels_like"></ImageView>
+                android:src="@drawable/feels_like"/>
 
             <Space
                 android:layout_width="5dp"
-                android:layout_height="wrap_content"></Space>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Feels Like"
+                android:text="@string/feels_like"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/feelsT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="Speed"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold">
@@ -404,21 +395,19 @@
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="10dp"></Space>
+        android:layout_height="10dp"/>
 
     <TextView
         android:id="@+id/lastupdateT"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:gravity="bottom|end"
-        android:paddingEnd="6dp"
         android:paddingBottom="6dp"
         android:text="Updated Time"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold" />
+        android:textSize="16sp" />
 
 
 </LinearLayout>
